# RaeenOS-production-

./: .clang-format  .cppcheck.cfg  .editorconfig  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakeLists_temp.txt  Extra features.md  KERNEL_IMPLEMENTATION_STATUS.md  Makefile  Makefile.bootable  Makefile.config  Makefile.enhanced  Makefile.interactive  Makefile.interactive.simple  Makefile.minimal  Makefile.multi-platform  Makefile.production  Makefile.raeenui  Makefile.rules  Makefile.simple  Makefile.simple_iso  Makefile.test  PRODUCTION_ROADMAP.md  RAEENOS_REVOLUTIONARY_FEATURES.md  README.md  TODO.md  build.bat  gemini.md  get_hashes.bat  hal_stub.c  hashes_and_paths.txt  heap_production.c  idt_production.c  kernel.c  kernel_enhanced.c  kernel_helpers.c  kernel_interactive.c  kernel_interactive_enhanced.c  kernel_interactive_simple.c  (+21 more)
.claude/: settings.local.json
.claude/agents/: accessibility-champion.md  ai-orchestrator.md  api-sdk-architect.md  app-framework-engineer.md  app-store-architect.md  audio-subsystem-engineer.md  backup-recovery-engineer.md  brand-identity-guru.md  code-quality-analyst.md  (+32 more)
.github/: CODEOWNERS  pull_request_template.md
RaeenOne/: PLAN.md
acpi/: acpi.c  acpi.h
ai/: ai_engine.c  ai_engine.h
apps/: file_manager.c  text_editor.c
audio/: audio.c
boot/: boot.asm  boot_orchestrator.c  boot_orchestrator.h  multiboot.asm  oobe.h  session.h  splash.c  splash.h
build_cmake/: CMakeCache.txt  cmake_install.cmake
build_exclude/: compositor.c  dhcp_client.c  dns_resolver.c  e1000.c  event.c  exec.c  fat32_production.c  filesystem_advanced.c  graphics_pipeline.c  heap_production.c  idt.asm  idt.c  input.c  interrupt_stubs.asm  kernel.c  kernel_debugger.c  mouse.c  network.c  nvme.c  process_advanced.c  slab_allocator.c  syscall_impl.c  tcp_production.c  timer.c  vfs_events.c  vulkan_driver.c
demo/: raeenos_showcase.c
desktop/: desktop_shell.c  desktop_shell.h
docs/: AGENT_COORDINATION_GUIDE.md  CI_CD_INFRASTRUCTURE_GUIDE.md  DEPLOYMENT_SUMMARY.md  INTERFACE_INTEGRATION_GUIDE.md  MASTER_PROJECT_PLAN.md  QUALITY_GATES_FRAMEWORK.md  REPOSITORY_ARCHITECTURE.md  SYSTEM_ARCHITECTURE.md
drivers/: npu.h
filesystem/: fat32_production.c
gpu/: compositor.c  directx_compat.c  gpu.c  graphics_pipeline.c  graphics_pipeline.h  vulkan_driver.c
kernel/: acpi.h  boot_entry.c  boot_multiboot.asm  cpu_affinity.c  driver.c  entry.asm  event.c  exec.c  exec.h  filesystem_advanced.c  font.c  font.h  gaming_scheduler.c  gdt.c  gdt.h  gdt_asm.asm  graphics.c  graphics.h  hal_impl.c  hal_stub.c  idt.c  idt.h  idt_asm.asm  idt_simple.c  interrupt_production.h  interrupt_stubs.asm  interrupt_stubs_complete.asm  io.h  isr_handler.c  kernel.c  kernel_debugger.h  kernel_main.c  keyboard.c  keyboard.h  linker.ld  linker_boot.ld  linker_mb2.ld  linker_multiboot.ld  linker_simple.ld  memory.c  (+50 more)
network/: dhcp_client.c  dns_resolver.c  e1000.c  network.h  network_advanced.h  udp_stack.c
package_manager/: Makefile  PACKAGE_FORMAT.md  raepkg.c  raepkg.h  raepkg_cli.c
pci/: pci.c  pci_driver.h
pkg/: pkg.c  pkg.h  repo.c  repo.h
raecompat/: Makefile  protonctl.c  raecompat_core.c  raecompat_core.h  raeen_game_manager.c  raeen_game_manager.h  setup_raecompat.sh
runtime/: python_runtime.c
scripts/: migrate-to-new-structure.sh
security/: Makefile  README.md  access_control.c  ids.c  policy_engine.c  raesec.c  raesec.h  sandbox.c  security_integration.c
storage/: nvme_driver.c
tests/: main.c
ui/: Makefile  desktop_shell.c  desktop_shell.h  file_explorer.h  i18n.c  i18n.h  notification.c  notification.h  raeenui.h  raeenui_core.c  raeenui_declarative.c  raeenui_render.c  raeenui_theme.c  system_tray.c  taskbar.c  terminal.h  theme.c  theme.h
userland/: app_store.c  app_store.h  automation_suggestions.c  automation_suggestions.h  code_generation.c  code_generation.h  context_awareness.c  context_awareness.h  debugger.c  debugger.h  file_organizer.c  file_organizer.h  libc.c  nlp.c  nlp.h  predictive_text.c  predictive_text.h  profiler.c  profiler.h  python_runtime.c  python_runtime.h  raeen_ui.c  raeen_ui.h  sdk.c  sdk.h  shell.c  syscall.c  system_integration.c  system_integration.h  ui_builder.c  ui_builder.h  user_debugger.c  user_debugger.h  voice_recognition.c  voice_recognition.h
virtualization/: hypervisor.c
(+333 files in other folders)
